Agenda: hard refresh reloads dentists and sanitizes selection; Events: include deactivated dentists in invalid-only; Users: admin toggle active/inactive; Fix Flask-Login is_active setter; Move calendar tables to calendario.db; Add verificar_db.py; Fix static type errors in routes; Documentos: ensure all code paths return ResponseReturnValue

--- a/agenda/static/search-menu.html
+++ b/agenda/static/search-menu.html
@@ -9,7 +9,7 @@
       <button id="btnApplySearch" class="btn btn-primary">Buscar</button>
       <button id="btnClearSearch" class="btn btn-outline-secondary">Limpar</button>
     </div>
-    <div class="small text-muted mb-1">Cores aceitas: vermelho, rosa, laranja, amarelo, verde, verde-agua, azul, azul-claro, roxo, roxo-escuro, rosa-claro, cinza</div>
+  <div class="small text-muted mb-1">Cores aceitas: vermelho, rosa, laranja, amarelo, verde, verde-agua, azul, azul-claro, roxo, roxo-escuro, rosa-claro, cinza (ou use um código hex como #f43f5e)</div>
     <div id="searchResultsSummary" class="small"></div>
   </div>
   <style>
